--- a/playbook.yml
+++ b/playbook.yml
@@ -53,6 +53,8 @@
     - name: Create and mount efs shareddir
       shell: mkdir -p /efs && sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport 172.31.81.24:/ /efs
 
+    - name: Edit fstab to mount efs
+      shell: grep -qxF "[fs-07fe1556154fa09f5.efs.us-east-1.amazonaws.com]:/ /efs nfs4 defaults,_netdev 0 0" /etc/fstab || echo "[fs-07fe1556154fa09f5.efs.us-east-1.amazonaws.com]:/ /efs nfs4 defaults,_netdev 0 0" >> /etc/fstab
 
 #    - name: Clone mediawiki repo
 #      git:
